# poo-andrebernardi

./: .gitignore  README.md
assessment/: Makefile  README.md
assessment/include/: BimonthlyExam.h  LongInteger.h  Polynomial.h
assessment/src/: BimonthlyExam.cpp  LongInteger.cpp  Polynomial.cpp  (+3 more)
ativ_avaliativa1/: longerinter.cpp  longerinter.h  mainQ1.cpp  mainQ2.cpp  polinomio.cpp  polinomio.h  prova_bimestral.h
lab_1/: .gitignore  Makefile  README.md  lab_1_luis_pedras.cpp  q1.cpp  q2.cpp  q3.cpp  retangulo.cpp
lab_2/: .gitignore  CFracao.cpp  CFracao.h  Makefile  README.md  exs8.cpp  lab_2_luis_pedras.cpp  poligono.cpp  poligono.h  retangulo.cpp  retangulo.h
lab_3/: .gitignore  Makefile  README.md  complexos.cpp  complexos.h  longerinter.cpp  longerinter.h  main_ex1.cpp  main_ex2.cpp  main_ex3.cpp  triangulo.cpp  triangulo.h
lab_4/: CFracao.cpp  CFracao.h  Makefile  README.md  complexos.cpp  complexos.h  longerinter.cpp  longerinter.h  main_CFracao.cpp  main_Complexo.cpp  main_LongInteger.cpp
lab_5/: .gitignore  CFracao.cpp  CFracao.h  CMakeLists.txt  README.md  complexos.cpp  complexos.h  data.cpp  data.h  livros.cpp  livros.h  main_Cfracao_Complexos.cpp  main_data.cpp  main_livros.cpp  main_polinomio.cpp  main_ponto.cpp  polinomio.cpp  polinomio.h  ponto.cpp  ponto.h
lab_5/include/: Book.h  Complex.h  Date.h  Fraction.h  Point.h  Polynomial.h
lab_5/src/: Book.cpp  Complex.cpp  Date.cpp  Fraction.cpp  Point.cpp  Polynomial.cpp  main_book.cpp  main_date.cpp  main_fraction_complex.cpp  main_point.cpp  main_polynomial.cpp
lab_6/: Makefile  PhoneNumber.cpp  PhoneNumber.h  README.md  geometria.cpp  mainPhoneNumber.cpp  mainPolinomio.cpp  polinomio.cpp  polinomio.h
lab_7/: Makefile  README.md  classes.h  mainex1.cpp  mainex2.cpp
lab_8/: Makefile  README.md  mainex1.cpp  mainex2.cpp  mainex4.cpp  pilha.cpp  pilha.h  polinomio.cpp
lab_9/: CVetor.h  Makefile  README.md  mainex1.cpp  mainex2.cpp  pilha.cpp  pilha.h
teste/: teste.cpp
(+54 files in other folders)
